Changed package to DCF (from DCFdevel).

--- a/CSS/DCF-common.Rmd
+++ b/CSS/DCF-common.Rmd
@@ -25,5 +25,5 @@ options( width=60,
          # Printing tables
          xtable.type="html",
          xtable.include.rownames=FALSE)
-require(DCFdevel)
+require(DCF)
 ```
