--- a/CourseNotes/Rbasics/DraftNarrative.Rmd
+++ b/CourseNotes/Rbasics/DraftNarrative.Rmd
@@ -1,12 +1,12 @@
 ---
 output:
   html_document:
-    css: ~/KaplanFiles/DCF-2014/ReOrganizedJune10/CSS/DCF-style.css
+    css: ~/KaplanFiles/DCF-2014/CSS/DCF-style.css
     fig_caption: yes
     toc: yes
 ---
 
-```{r child="/Users/kaplan/KaplanFiles/DCF-2014/ReOrganizedJune10/CSS/DCF-common.Rmd"}
+```{r child="/Users/kaplan/KaplanFiles/DCF-2014/CSS/DCF-common.Rmd"}
 ```
 
 ## Objectives
@@ -75,8 +75,7 @@ data( "BabyNames" )
 ```
 
 ```{r echo=FALSE}
-data("babyNames")
-BabyNames <- babyNames
+data("BabyNames")
 ```
 
 ### Just Looking ...
