--- a/Pre-JuneReorganization/Narrative/GraphicsGrammar/GraphicsGrammar.Rmd
+++ b/Pre-JuneReorganization/Narrative/GraphicsGrammar/GraphicsGrammar.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r include=FALSE}
-require(DCFdevel)
+require(DCF)
 require(dplyr)
 require(ggplot2)
 require(knitr)
