--- a/Exercises/Introductory/2013-08-12-DTK-World-Cities.Rmd
+++ b/Exercises/Introductory/2013-08-12-DTK-World-Cities.Rmd
@@ -10,7 +10,7 @@ layout: exercise
 status: complete
 ---
 
-Bring into your R session the data table named `WorldCities` from the `DCFdevel` package.  Use `View( WorldCities )` to look at the data.
+Bring into your R session the data table named `WorldCities` from the `DCF` package.  Use `View( WorldCities )` to look at the data.
 
 * How many cases are there?
 * What are the variables?
