--- a/Exercises/OrganizationOfExercises.Rmd
+++ b/Exercises/OrganizationOfExercises.Rmd
@@ -120,7 +120,7 @@ The spreadsheet [here](http://vote.minneapolismn.gov/www/groups/public/@clerk/do
 
 ## What Fraction
 
-What Fraction of each country's population lives in cities $> 500,000$.  Get country-wide population from `CIAdata(2199)` and use `data(WorldCities,package='DCFdevel')` to add up the country.  Need to locate the two-letter country codes.  They are listed [http://en.wikipedia.org/wiki/ISO_3166-1_alpha-2]: Data scraping exercise.  And [here they are](https://raw.githubusercontent.com/pudo/lobbytransparency/master/etl/countrycodes.csv) in a CSV format. And [still another](http://www.nationsonline.org/oneworld/country_code_list.htm). And [another](http://www.unc.edu/~rowlett/units/codes/country.htm)
+What Fraction of each country's population lives in cities $> 500,000$.  Get country-wide population from `CIAdata(2199)` and use `data(WorldCities,package='DCF')` to add up the country.  Need to locate the two-letter country codes.  They are listed [http://en.wikipedia.org/wiki/ISO_3166-1_alpha-2]: Data scraping exercise.  And [here they are](https://raw.githubusercontent.com/pudo/lobbytransparency/master/etl/countrycodes.csv) in a CSV format. And [still another](http://www.nationsonline.org/oneworld/country_code_list.htm). And [another](http://www.unc.edu/~rowlett/units/codes/country.htm)
 
 
 
